k8s/1-namespace.yaml
# Create a namespace called: tomcat-app-ns
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat-app-ns
spec: {}
status: {}
