k8s/3-service.yaml
# Create a Service called: tomcat-app-service in ns: tomcat-app-ns to expose 8080
apiVersion: v1
kind: Service
metadata:
  name: tomcat-app-service
  namespace: tomcat-app-ns
spec:
  selector:
    app: tomcat-app
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30090
  type: NodePort
