k8s/4-service-for-ingress.yaml
# Create a Service called: tomcat-app-service in ns: tomcat-app-ns to expose 8080
apiVersion: v1
kind: Service
metadata:
  name: tomcat-app-service-ingress
  namespace: tomcat-app-ns
spec:
  selector:
    app: tomcat-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
